cmake_minimum_required(VERSION 3.14)
project(DSA_Project_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA_Project_2 main.cpp ListItem.h List.h Queue.h Graph_Node.cpp Graph_Node.h Graph_Edge.cpp Graph_Edge.h Dynamic_Graph.cpp Dynamic_Graph.h Tree_Node.h Rooted_Tree.cpp Rooted_Tree.h Pair.h Stack.h)